workspace-sf/force-app/main/default/objects/GarantiaContratanteContrato__c/GarantiaContratanteContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do contratante do contrato</description>
    <label>Garantia do contratante do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do contratante do contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>