workspace-sf/force-app/main/default/objects/GarantiaContratanteContrato__c/fields/ContratanteContrato__c.field-meta.xml
<CustomField>
    <fullName>ContratanteContrato__c</fullName>
    <label>Contratante do contrato</label>
    <referenceTo>ContratanteContrato__c</referenceTo>
    <relationshipLabel>Garantias do contratante do contrato</relationshipLabel>
    <relationshipName>GarantiasContratanteContrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>