workspace-sf/force-app/main/default/objects/GarantiaContratanteContrato__c/fields/DescontoAgravoMonetarioFormaPagto__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoMonetarioFormaPagto__c</fullName>
    <label>Desconto agravo monetário forma pagto</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>