workspace-sf/force-app/main/default/objects/GarantiaContratanteContrato__c/fields/DescontoAgravoPercentualInformado__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoPercentualInformado__c</fullName>
    <label>Desconto agravo percentual informado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>