workspace-sf/force-app/main/default/objects/GarantiaContratanteContrato__c/fields/GarantiaReferenciada__c.field-meta.xml
<CustomField>
    <fullName>GarantiaReferenciada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia referenciada</label>
    <referenceTo>Garantia__c</referenceTo>
    <relationshipLabel>Garantias do contratante do contrato (Garantia referenciada)</relationshipLabel>
    <relationshipName>GarantiasReferenciadaContratanteContrato</relationshipName>
    <type>Lookup</type>
</CustomField>