workspace-sf/force-app/main/default/objects/GarantiaContratanteContrato__c/fields/NumeroTitulo__c.field-meta.xml
<CustomField>
    <fullName>NumeroTitulo__c</fullName>
    <label>Número do título</label>
    <length>255</length>
    <type>Text</type>
</CustomField>